@@ -8,6 +8,7 @@ Fixes
 - NodeEditor : Fixed bug that allowed drag and drop to create unwanted input connections to output plugs.
 - GraphComponent : Fixed bug that allowed construction with an invalid name (#3436).
 - Layouts : Keyboard shortcuts will now work in detached panels restored with a layout.
+- ArnoldLight : Fixed a bug that prevented OSL shaders being used with Arnold lights.
 
 0.54.2.1 (relative to 0.54.2.0)
 ========
